# MNIST_Playground

./: README.md  canvas.py  main.py  mnist_model.keras  model.py  pyproject.toml  train.py
