[project]
name = "mnist-playground"
version = "0.1.0"
description = "MNIST Playground with pygame UI"
authors = [
    {name = "Sebastian Vega",email = "sebasvega4604@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pygame = "^2.6.1"
tensorflow = "^2.19.0"
matplotlib = "^3.10.3"
